--- a/_sass/addon/module.scss
+++ b/_sass/addon/module.scss
@@ -7,7 +7,8 @@
 %heading {
   color: var(--heading-color);
   font-weight: 400;
-  font-family: 'Lato', 'Microsoft Yahei', sans-serif;
+  /* modified, Arial added */
+  font-family: Arial, 'Lato', 'Microsoft Yahei', sans-serif;
 }
 
 %tag-hover {
