--- a/_sass/layout/archives.scss
+++ b/_sass/layout/archives.scss
@@ -125,7 +125,8 @@
 
     &.day {
       font-size: 85%;
-      font-family: 'Lato', sans-serif;
+      /* modified, Arial added */
+      font-family: Arial, 'Lato', sans-serif;
       text-align: center;
       margin-right: -2px;
       width: 1.2rem;
