--- a/_sass/layout/home.scss
+++ b/_sass/layout/home.scss
@@ -4,7 +4,8 @@
 
 .pagination {
   color: var(--btn-patinator-text-color);
-  font-family: 'Lato', sans-serif;
+  /* modified, Arial added */
+  font-family: Arial, 'Lato', sans-serif;
 
   a:hover {
     text-decoration: none;
