--- a/_sass/layout/tags.scss
+++ b/_sass/layout/tags.scss
@@ -14,6 +14,7 @@
   span {
     margin-left: 0.6em;
     font-size: 0.7em;
+    /* modified, Arial added */
     font-family: 'Oswald', sans-serif;
   }
 }
