--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -96,7 +96,12 @@ h2 {
   @extend %section;
   @extend %anchor;
 
-  font-size: 1.4rem;
+  // modified, font-weight add
+  font-weight: 700;
+  // modified, margin-top add
+  margin-top: .85rem;
+  // modified, font-size changed
+  font-size: 1.5rem;
 }
 
 h3 {
@@ -104,7 +109,12 @@ h3 {
   @extend %section;
   @extend %anchor;
 
-  font-size: 1.25rem;
+  // modified, font-weight add
+  font-weight: 700;
+  // modified, font-size changed
+  font-size: 1.2rem;
+   // modified, color add
+  color: #5a5a5ae5;
 }
 
 h4 {
