--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -134,7 +134,7 @@ h5 {
   @extend %anchor;
 
   font-size: 1.1rem;
-  // modified by scribnote5
+  // modified, font-weight 700 add
   font-weight: 700;
 }
 
